--- a/style.css
+++ b/style.css
@@ -152,3 +152,100 @@ form input,form select{
     width: 90%;
    }
 }
+
+
+
+
+  /* Sidebar styling */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    height: 100%;
+    width: 250px;
+    background-color: #333;
+    color: #fff;
+    transition: all 0.3s ease;
+    padding-top: 20px;
+  }
+  
+  .sidebar-header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .sidebar-header h2 {
+    color: #fff;
+  }
+  
+  .sidebar .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: #fff;
+    background: none;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .sidebar ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .sidebar ul li {
+    margin: 15px 0;
+  }
+  
+  .sidebar ul li a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 4px;
+    transition: background 0.3s;
+  }
+  
+  .sidebar ul li a:hover {
+    background-color: #575757;
+  }
+  
+  .sidebar ul li a i {
+    margin-right: 10px;
+    font-size: 18px;
+  }
+  
+
+  .content {
+    margin-left:-700px;
+    margin-top: -90px;
+    padding: 20px;
+    width: 100%;
+  }
+  
+  .open-btn {
+    font-size: 30px;
+    cursor: pointer;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+  }
+  
+  .open-btn:hover {
+    background-color: #444;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .sidebar {
+      width: 200px;
+    }
+  
+    .content {
+      margin-left: 0;
+    }
+  }
+  
