--- a/style.css
+++ b/style.css
@@ -245,7 +245,16 @@ form input,form select{
     }
   
     .content {
-      margin-left: 0;
+      margin-left: -250px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .sidebar {
+      width: 200px;
+    }
+  
+    .content {
+      margin-left: -450px;
     }
   }
   
